0030403: Application Framework - Overwriting Big BinOcaf Files Does Not Reduce Their Size

OSD_OpenFileDescriptor(), added truncating flag to fopen() flags for std::ios_base::out,
since truncating is implied by C++ output flag.
This fixes misbehavior of OSD_OpenStream() on MinGW-w64 platform.